# fastapi-issue-tracker

./: .gitignore  LICENSE.md  Makefile  README.md  mypy.ini  pyproject.toml
fastapi_issue_tracker/: .env.example  __init__.py  app.py  app_manager.py  auth.py  config.py  main.py  routes.py
fastapi_issue_tracker/data/: crud.py  database.py  models.py  schemas.py
