[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fastapi_issue_tracker"
version = "0.1.0"
description = "A very basic Issue Tracker REST API built using FastAPI"
license = "MIT"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
SQLAlchemy = "^1.3.19"
uvicorn = "^0.12.0"
pydantic = "^1.6.1"
psycopg2 = "^2.8.6"
starlette = "^0.13.6"

[tool.poetry.scripts]
app = "fastapi_issue_tracker.main:start"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.5.4"

[tool.isort]
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.svn|_build|buck-out|build|dist)/'
